# SokoPay

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  audit.toml  dev.sh  docker-compose.yml  vercel.json
.github/workflows/: deploy-frontend.yml  deploy.yml  main.yml
docs/superpowers/plans/: 2026-04-27-bugfixes-429-and-products.md
docs/superpowers/specs/: 2026-04-27-cicd-deploy-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: 404.html  manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AIPriceSuggestion.tsx  AdminDisputes.tsx  AdminStats.tsx  ApiKeyManager.tsx  BuyerOrders.tsx  CartDrawer.tsx  CartPage.tsx  CategoryPage.tsx  ConnectModal.tsx  CurrencyConverter.tsx  Dashboard.tsx  DisplayOptions.tsx  EmptyState.tsx  Farmers.tsx  FollowButton.tsx  FollowingPage.tsx  Footer.tsx  HomePage.tsx  Layout.tsx  LeaderboardSection.tsx  LightningSendTip.tsx  Marketplace.tsx  MessageThread.tsx  NewPaymentModal.tsx  OnboardingModal.tsx  PaymentHistory.tsx  PaymentProgress.tsx  PaymentReceipt.tsx  Payments.tsx  PriceIndex.tsx  ProductCard.tsx  ProductDetail.tsx  ProductForm.tsx  Profile.tsx  ReferralProgram.tsx  SellerDashboard.tsx  SellerStorefront.tsx  SellerTierBadge.tsx  ShareProductModal.tsx  Skeleton.tsx  (+5 more)
frontend/src/context/: auth.tsx  cart.tsx  displaySettings.tsx  toast.tsx  wishlist.tsx
frontend/src/hooks/: useCheckout.ts  useCountry.ts  usePaymentPreference.ts  usePromoCode.ts  useRecentlyViewed.ts  useSearchHistory.ts  useSellerFollow.ts  useSmartSearch.ts  useWishlistPriceAlerts.ts
frontend/src/i18n/: translations.ts
frontend/src/types/: index.ts
migrations/: 001_initial.sql  002_indexes_and_offer_id.sql  006_ratings.sql  007_payment_idempotency.sql  008_global_marketplace.sql  009_dispute_resolution.sql  010_refund_tracking.sql  011_mpesa_payments.sql  012_payments_btcpay_invoice_id.sql  013_dispute_uniqueness.sql  014_soft_deletes.sql  015_disbursements.sql  016_order_messages.sql  018_api_keys.sql  019_referrals.sql  020_farmer_email.sql  021_delivery_photos.sql  023_low_stock_threshold.sql  025_mpesa_payments_order_pending_unique.sql  026_disbursement_type.sql  027_jwt_revocations.sql  028_product_rating_columns.sql  029_callback_indexes.sql
src/: config.rs  db.rs  error.rs  main.rs  metrics.rs  models.rs  state.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  nostr.rs  refresh.rs
src/db/: mod.rs
src/disputes/: handlers.rs
src/farmers/: api_keys.rs  handlers.rs  mod.rs  referrals.rs  storefront.rs
src/lightning/: mod.rs  monitor.rs  node.rs
src/lnurl/: client.rs  mod.rs  server.rs
src/mpesa/: b2c.rs  client.rs  handlers.rs  mod.rs  types.rs
src/notifications/: email.rs  mod.rs  nostr_dm.rs  sms.rs
src/oracle/: handlers.rs  mod.rs  rate.rs
src/orders/: handlers.rs  messages.rs
src/payments/: handlers.rs
src/products/: handlers.rs  mod.rs  price_index.rs
src/ratings/: handlers.rs
src/routes/: dashboard.rs  farmers.rs  middleware.rs  mod.rs  oracle.rs  payments.rs  webhooks.rs
src/workers/: disbursement.rs  dispute_timeout.rs  low_stock.rs  mod.rs  payment_expiry.rs
