[package]
name = "agri-pay"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "agri-pay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Env loading
dotenvy = "0.15"

# JWT
jsonwebtoken = "10"

# Decimal arithmetic
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
base64 = "0.21"
k256 = { version = "0.13", features = ["schnorr"] }
signature = "2"

# RSA for M-Pesa production SecurityCredential
rsa = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Password hashing
bcrypt = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
