[package]
name = "agri-pay"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "agri-pay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs", "request-id"] }
# Rate limiting (per-IP via governor/leaky-bucket)
tower_governor = { version = "0.4", features = ["axum"] }
governor = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Env loading
dotenvy = "0.15"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Decimal arithmetic
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["global-context"] }
# AES-256-CBC for NIP-04 Nostr DM encryption
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

# WebSocket client for Nostr relay delivery
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Password hashing
bcrypt = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
